--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,6 +3,7 @@ description: Previously known as cloud_firestore_mocks. Fake implementation of C
 version: 1.3.1
 homepage: https://www.wafrat.com
 repository: https://github.com/atn832/fake_cloud_firestore
+publish_to: https://pub.trugman.com/
 
 environment:
   sdk: ">=2.18.2 <3.0.0"
